# digital-ops-scale-kit

./: .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml
.github/: WORKFLOWS.md  dependabot.yaml  dependabot.yml
.github/actions/connect-arc/: action.yaml
.github/actions/create-k3s-cluster/: action.yaml
.github/actions/setup-siteops/: action.yaml
.github/workflows/: _siteops-deploy.yaml  ci.yaml  codeql.yaml  deploy.yaml  e2e-test.yaml  integration-test.yaml  validate-pr.yaml
.pipelines/: ci.yaml  deploy.yaml  integration-test.yaml
.pipelines/templates/: setup-siteops.yaml  siteops-deploy.yaml
docs/: README.md  aio-releases.md  aio-versions.md  ci-cd-setup.md  e2e-testing.md  manifest-includes.md  manifest-reference.md  parameter-resolution.md  secret-sync.md  site-configuration.md  troubleshooting.md
scripts/: generate-site-overrides.py  render-e2e-site.py  validate-bicep.ps1
siteops/: __init__.py  __main__.py  cli.py  executor.py  models.py  orchestrator.py
tests/: test_cli.py  test_executor.py  test_manifest_includes.py  test_models.py  test_mqtt_subscriber_manifest.py  test_orchestrator_core.py  test_orchestrator_extra_sites_dirs.py  test_orchestrator_inheritance.py  test_orchestrator_parameters.py  test_orchestrator_unresolved.py  test_orchestrator_validation.py  test_render_e2e_site.py  test_secret_redaction.py  test_wait_step.py
tests/e2e/sites/: e2e-test.yaml.tmpl
tests/integration/: conftest.py  test_aio_install_manifest.py  test_aio_upgrade_manifest.py  test_opc_ua_solution_manifest.py  test_secretsync_manifest.py  test_sync_secrets_manifest.py
tests/workspace/: conftest.py  test_manifest_validation.py  test_parameter_chaining.py  test_site_configuration.py
workspaces/iot-operations/: README.md
workspaces/iot-operations/manifests/: README.md  _aio-fundamentals.yaml  _resolve-aio.yaml  _secretsync.yaml  aio-install.yaml  aio-upgrade.yaml  aksee-bootstrap.yaml  opc-ua-solution.yaml  secretsync.yaml
workspaces/iot-operations/parameters/: README.md  aio-instance-chaining.yaml  aio-instance-outputs.yaml  aio-upgrade-resolve-cert-manager.yaml  aio-upgrade-resolve-extensions.yaml  aio-upgrade-update-extensions.yaml  chaining.yaml  common.yaml  opc-ua-solution-chaining.yaml  post-instance.yaml  secretsync-chaining.yaml
workspaces/iot-operations/samples/: README.md
workspaces/iot-operations/scenarios/: README.md  aio-with-opc-ua.yaml
workspaces/iot-operations/sites/: README.md  base-site.yaml  chicago-staging.yaml  contoso-global.yaml  munich-dev.yaml  munich-prod.yaml  seattle-dev.yaml  seattle-prod.yaml
workspaces/iot-operations/templates/: README.md  edge-site.bicep
(+61 files in other folders)
