[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siteops"
version = "0.1.0"
description = "Azure Site Ops - Multi-site orchestration for Azure IaC"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Microsoft Corporation"},
    {name = "digimaun"},
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
siteops = "siteops.cli:main"

[project.urls]
Repository = "https://github.com/Azure/digital-ops-scale-kit"

[tool.setuptools.packages.find]
include = ["siteops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["siteops"]
omit = ["siteops/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
